# rocm-installer-runfile

./: .gitignore  .pre-commit-config.yaml  Jenkinsfile  README.md
.github/: CODEOWNERS
.github/workflows/: build_linux_runfile_installer.yaml  build_linux_runfile_installer.yml  code-quality-check.yaml  codeql-analysis.yaml  promote_release_to_external.yml  runfile_installer_ci.yaml  runfile_installer_ci.yml  runfile_installer_nightly.yaml  runfile_installer_nightly.yml  style-checker.yaml
offline-installer-contained/: CMakeLists.txt  VERSION  build-installer.sh  rocm-makeself-header-pre.sh  rocm-makeself-header.sh  setup-installer.sh
offline-installer-contained/UI/: CMakeLists.txt
offline-installer-contained/UI/src/: config.h  debug_ui.h  driver_menu.c  driver_menu.h  help_menu.c  help_menu.h  install_types.h  menu_data.c  menu_data.h  post_menu.c  post_menu.h  pre_menu.c  pre_menu.h  rocm_menu.c  rocm_menu.h  rocm_ui.c  utils.c  utils.h
offline-installer-contained/package-extractor/: package-extractor-debs.sh  package-extractor-rpms.sh
offline-installer-contained/package-extractor/setup-install/: setup-rocm.sh
offline-installer-contained/package-puller/: package-puller-deb.sh  package-puller-el.sh  package-puller-sle.sh
offline-installer-contained/package-puller/config/amzn/23/: rocm-7.2-al2023.config  rocm-7.2.1-al2023.config
offline-installer-contained/package-puller/config/deb/22.04/: rocm-6.3-22.04.config  rocm-6.3.1-22.04.config  rocm-6.3.2-22.04.config  rocm-6.3.3-22.04.config  rocm-6.4-22.04.config  rocm-6.4.1-22.04.config  rocm-6.4.2-22.04.config  rocm-6.4.3-22.04.config  rocm-7.0-22.04.config  rocm-7.0.1-22.04.config  rocm-7.0.2-22.04.config  rocm-7.1-22.04.config  rocm-7.1.1-22.04.config  rocm-7.2-22.04.config  rocm-7.2.1-22.04.config
offline-installer-contained/package-puller/config/deb/24.04/: rocm-6.3-24.04.config  rocm-6.3.1-24.04.config  rocm-6.3.2-24.04.config  rocm-6.3.3-24.04.config  rocm-6.4-24.04.config  rocm-6.4.1-24.04.config  rocm-6.4.2-24.04.config  rocm-6.4.3-24.04.config  rocm-7.0-24.04.config  rocm-7.0.1-24.04.config  rocm-7.0.2-24.04.config  rocm-7.1-24.04.config  rocm-7.1.1-24.04.config  rocm-7.2-24.04.config  rocm-7.2.1-24.04.config
offline-installer-contained/package-puller/config/el/10/: rocm-7.0-el10.config  rocm-7.0.2-el10.config  rocm-7.1-el10.config  rocm-7.1.1-el10.config  rocm-7.2-el10.config  rocm-7.2.1-el10.config
offline-installer-contained/package-puller/config/el/8/: rocm-6.3-el8.config  rocm-6.3.1-el8.config  rocm-6.3.2-el8.config  rocm-6.3.3-el8.config  rocm-6.4-el8.config  rocm-6.4.1-el8.config  rocm-6.4.2-el8.config  rocm-6.4.3-el8.config  rocm-7.0-el8.config  rocm-7.0.1-el8.config  rocm-7.0.2-el8.config  rocm-7.1-el8.config  rocm-7.1.1-el8.config  rocm-7.2-el8.config  rocm-7.2.1-el8.config
offline-installer-contained/package-puller/config/el/9/: rocm-6.3-el9.config  rocm-6.3.1-el9.config  rocm-6.3.2-el9.config  rocm-6.3.3-el9.config  rocm-6.4-el9.config  rocm-6.4.1-el9.config  rocm-6.4.2-el9.config  rocm-6.4.3-el9.config  rocm-7.0-el9.config  rocm-7.0.1-el9.config  rocm-7.0.2-el9.config  rocm-7.1-el9.config  rocm-7.1.1-el9.config  rocm-7.2-el9.config  rocm-7.2.1-el9.config
offline-installer-contained/package-puller/config/sle/15.5/: rocm-6.3-sle-15.5.config  rocm-6.3.1-sle-15.5.config  rocm-6.3.2-sle-15.5.config  rocm-6.3.3-sle-15.5.config  rocm-6.4-sle-15.5.config
offline-installer-contained/package-puller/config/sle/15.6/: rocm-6.3-sle-15.6.config  rocm-6.3.1-sle-15.6.config  rocm-6.3.2-sle-15.6.config  rocm-6.3.3-sle-15.6.config  rocm-6.4-sle-15.6.config  rocm-6.4.1-sle-15.6.config  (+9 more)
offline-installer-contained/package-puller/setup/pin/: artifactory-pin-600
offline-installer-contained/rocm-installer/: cleanup-install.sh  deps-installer.sh  install-init.sh  rocm-installer.sh
offline-installer-contained/test/: amd-smi-test.sh  rocdecode-test.sh  rocm-examples-test.sh  rocm-rvs-test.sh  untar-test.sh
runfile-installer/: build-runfile-installer.sh  clean-setup.sh
runfile-installer/UI/: CMakeLists.txt
runfile-installer/UI/rocm_menus/: driver_help  postinstall_help  preinstall_help  rocm_compo_help  rocm_compo_items  rocm_compo_items_desc  rocm_device_help  rocm_device_items  rocm_device_items_desc  rocm_help
runfile-installer/UI/src/: config.h  debug_ui.h  driver_menu.c  driver_menu.h  help_menu.c  help_menu.h  menu_data.c  menu_data.h  post_menu.c  post_menu.h  pre_menu.c  pre_menu.h  rocm_menu.c  rocm_menu.h  rocm_ui.c  utils.c  utils.h
runfile-installer/build-installer/: CMakeLists.txt  build-installer.sh  component-compressor.sh  rocm-makeself-header-pre.sh.template  rocm-makeself-header.sh.template  setup-installer.sh
runfile-installer/build-installer/config/: dev.config  nightly.config  prerelease.config  release-7.11.config  release-7.12.config  release.config
runfile-installer/build-installer/tools/: build-xz-static.sh
runfile-installer/build_tools/github_actions/: github_actions_utils.py  setup_runfile_installer_nightly.py
runfile-installer/package-extractor/: package-extractor-all.sh  package-extractor-debs-nodpkg.sh  package-extractor-debs.sh  package-extractor-rpms.sh
runfile-installer/package-puller/: package-puller-amdgpu-all.sh  package-puller-deb-chroot.sh  package-puller-deb.sh  package-puller-el.sh  package-puller-sle.sh
runfile-installer/rocm-installer/: amdgpu-installer.sh  cleanup-install.sh  component-extractor.sh  deps-installer.sh  install-init.sh  rocm-installer.sh
runfile-installer/tests/: CMakeLists.txt
runfile-installer/tests/c/: test_file_io.c  test_gfx_extraction.c  test_stubs.c  test_utils.c
runfile-installer/tests/codeql-test/: README.md  analyze-rocm-ui.sh  cleanup.sh  run-codeql-analysis.sh
runfile-installer/tests/codeql-test/configs/: example.conf  rocm-ui.conf
runfile-installer/tests/codeql-test/suites/: amd-cpp-must-fix.qls
runfile-installer/tests/shellcheck-test/: README.md  analyze-runfile-installer.sh  cleanup.sh  run-shellcheck-analysis.sh
runfile-installer/tests/shellcheck-test/configs/: example.conf  rocm-installer.conf
(+16 files in other folders)
